--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
 theme: jekyll-theme-cayman
+source: README.md
+markdown: kramdown
+highlighter: rouge
+language: 'ko-kr'
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
+markdown: kramdown
+urls: "https://haruhuey.github.io"
