--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,4 +7,4 @@ kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
 markdown: kramdown
-urls: "https://haruhuey.github.io/Korea-School-Apis/"
+urls: "https://haruhuey.github.io"
